--- a/.github/workflows/build-cockpit-zfs.yml
+++ b/.github/workflows/build-cockpit-zfs.yml
@@ -49,7 +49,16 @@ jobs:
         shell: bash
         run: |
           set -euxo pipefail
-          sed -E -i 's/^(deb.*\s)main(\s|$)/\1main contrib\2/' /etc/apt/sources.list
+          . /etc/os-release
+          DIST="${VERSION_CODENAME:-trixie}"
+      
+          # Create a classic sources.list entry that includes contrib
+          cat >/etc/apt/sources.list.d/${DIST}-main-contrib.list <<EOF
+          deb http://deb.debian.org/debian ${DIST} main contrib
+          deb http://deb.debian.org/debian ${DIST}-updates main contrib
+          deb http://security.debian.org/debian-security ${DIST}-security main contrib
+          EOF
+          
           apt-get update
           DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
             ca-certificates curl git jq rsync pkg-config \
