--- a/.github/workflows/build-cockpit-zfs.yml
+++ b/.github/workflows/build-cockpit-zfs.yml
@@ -63,15 +63,16 @@ jobs:
                 print
               }' /etc/apt/sources.list.d/debian.sources > "$tmp"
             mv "$tmp" /etc/apt/sources.list.d/debian.sources
-          else
-            . /etc/os-release
-            DIST="${VERSION_CODENAME:-trixie}"
-            cat >/etc/apt/sources.list <<EOF
-            deb http://deb.debian.org/debian ${DIST} main contrib
-            deb http://deb.debian.org/debian ${DIST}-updates main contrib
-            deb http://security.debian.org/debian-security ${DIST}-security main contrib
-            EOF
           fi
+          #else
+          #  . /etc/os-release
+          #  DIST="${VERSION_CODENAME:-trixie}"
+          #  cat >/etc/apt/sources.list <<EOF
+          #  deb http://deb.debian.org/debian ${DIST} main contrib
+          #  deb http://deb.debian.org/debian ${DIST}-updates main contrib
+          #  deb http://security.debian.org/debian-security ${DIST}-security main contrib
+          #  EOF
+          #fi
           apt-get update
 
       - name: Install build toolchain & deps
