--- a/.github/workflows/build-cockpit-zfs.yml
+++ b/.github/workflows/build-cockpit-zfs.yml
@@ -82,8 +82,9 @@ jobs:
           DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
             ca-certificates curl git jq rsync pkg-config \
             build-essential debhelper devscripts fakeroot dpkg-dev dh-python \
-            python3 python3-dev python3-pip python3-setuptools python3-venv python3-wheel python3-packaging cython3 \
+            python3 python3-dev python3-setuptools python3-pip python3-venv python3-packaging python3-pip cython3 \
             zfsutils-linux libzfslinux-dev \
+            autoconf automake libtool \
             make gzip tar findutils xz-utils gnupg apt-utils \
             nodejs npm
           if command -v corepack >/dev/null 2>&1; then corepack enable || true; fi
@@ -120,6 +121,32 @@ jobs:
             FallbackRef="$(git describe --tags --abbrev=0 2>/dev/null || git rev-parse --abbrev-ref HEAD)"
             git checkout "$FallbackRef"
           fi
+
+      - name: Bootstrap py-libzfs (generate config.pxi via ./configure)
+        shell: bash
+        working-directory: py-libzfs
+        run: |
+          set -euxo pipefail
+          git fetch --tags --quiet || true
+      
+          # Prefer system pkg-config hints for libzfs
+          CFLAGS="$(pkg-config --cflags libzfs 2>/dev/null || true)"
+          LDFLAGS="$(pkg-config --libs   libzfs 2>/dev/null || true)"
+      
+          if [ -x ./configure ]; then
+            CFLAGS="$CFLAGS" LDFLAGS="$LDFLAGS" ./configure --prefix=/usr
+          elif [ -x ./autogen.sh ]; then
+            ./autogen.sh
+            CFLAGS="$CFLAGS" LDFLAGS="$LDFLAGS" ./configure --prefix=/usr
+          else
+            echo "::error::py-libzfs lacks configure/autogen.sh in this ref; cannot generate pxd/config.pxi"
+            exit 1
+          fi
+      
+          # Sanity check: config.pxi must exist after configure
+          test -f pxd/config.pxi || test -f config.pxi || {
+            echo "::error::configure did not generate config.pxi"; find . -maxdepth 2 -name '*config*.pxi' -ls; exit 1;
+          }
 
       - name: Build wheel for py-libzfs (in venv)
         id: pylibzfs_build
