--- a/.github/workflows/build-cockpit-zfs.yml
+++ b/.github/workflows/build-cockpit-zfs.yml
@@ -83,7 +83,7 @@ jobs:
             ca-certificates curl git jq rsync pkg-config \
             build-essential debhelper devscripts fakeroot dpkg-dev dh-python \
             python3 python3-dev python3-setuptools python3-pip python3-venv python3-packaging python3-pip cython3 \
-            zfsutils-linux libzfslinux-dev \
+            zfsutils-linux libzfslinux-dev python3-pyzfs \
             autoconf automake libtool \
             make gzip tar findutils xz-utils gnupg apt-utils \
             nodejs npm
