--- a/.github/workflows/build-cockpit-zfs.yml
+++ b/.github/workflows/build-cockpit-zfs.yml
@@ -53,7 +53,7 @@ jobs:
             build-essential dpkg-dev fakeroot debhelper devscripts \
             python3 python3-pip python3-packaging \
             git make gzip tar findutils xz-utils \
-            gnupg apt-utils moreutils \
+            gnupg apt-utils moreutils default-jre-headless graphviz \
             nodejs npm
           echo "PIP_BREAK_SYSTEM_PACKAGES=1" >> "$GITHUB_ENV"
           if command -v corepack >/dev/null 2>&1; then corepack enable || true; fi
@@ -102,19 +102,23 @@ jobs:
             make -j"$(nproc)"
           else
             echo "No ./configure; building with Yarn only (skip Makefile to avoid 'build:app')."
+      
+            # Use node-modules linker to avoid PnP pitfalls in CI
+            export YARN_NODE_LINKER=node-modules
             corepack enable || true
       
-            # Install deps (allow lock updates if needed) and ensure Electron types exist
+            # Install deps (allow lockfile updates if needed)
             YARN_ENABLE_IMMUTABLE_INSTALLS=false corepack yarn install
-            corepack yarn add -D @types/electron
       
-            # Build all workspaces that define a "build" script (Yarn 4 needs -A or -R)
+            # Root needs electron types; install at the top-level workspace (-W)
+            corepack yarn add -D -W @types/electron
+      
+            # Build all workspaces that define "build" (Yarn 4 requires -A/-R)
             corepack yarn workspaces foreach -Av --topological-dev run build || true
       
-            # Also try root-level build if present
+            # Fallback: try root build if present
             corepack yarn run build || true
           fi
-
 
       - name: Stage install tree (manual, from dist/)
         id: stage
