--- a/.github/workflows/build-cockpit-zfs.yml
+++ b/.github/workflows/build-cockpit-zfs.yml
@@ -48,10 +48,11 @@ jobs:
         shell: bash
         run: |
           set -euxo pipefail
-          DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
+          DEBIAN_FRONTEND=noninteractive apt-get install -y \
             ca-certificates curl jq rsync pkg-config \
             build-essential dpkg-dev fakeroot debhelper devscripts \
-            python3 python3-pip python3-packaging \
+            python3 python3-pip python3-packaging python3-dev python3-wheel python3-venv python3-packaging \
+            zfsutils-linux libzfslinux-dev \
             git make gzip tar findutils xz-utils \
             gnupg apt-utils moreutils default-jre-headless graphviz \
             nodejs npm
