--- a/.github/workflows/build-cockpit-zfs.yml
+++ b/.github/workflows/build-cockpit-zfs.yml
@@ -50,10 +50,10 @@ jobs:
           set -euxo pipefail
           DEBIAN_FRONTEND=noninteractive apt-get install -y \
             ca-certificates curl jq rsync pkg-config \
-            build-essential dpkg-dev fakeroot debhelper devscripts \
+            build-essential debhelper devscripts fakeroot dpkg-dev dh-python \
             python3 python3-pip python3-pyzfs python3-packaging python3-dev python3-wheel python3-venv python3-packaging \
             zfsutils-linux libzfslinux-dev \
-            git make gzip tar findutils xz-utils \
+            git make gzip tar findutils xz-utils gnupg apt-utils \
             gnupg apt-utils moreutils default-jre-headless graphviz \
             nodejs npm
           echo "PIP_BREAK_SYSTEM_PACKAGES=1" >> "$GITHUB_ENV"
@@ -79,7 +79,7 @@ jobs:
           git clone --depth 1 --branch "$TAG" https://github.com/45Drives/cockpit-zfs.git src
           git -C src submodule update --init --depth 1 --recursive
           echo "src=src" >> "$GITHUB_OUTPUT"
-          ls
+          cd src
       
       # 4) (Optional but per your spec) Parse Cython pin from README, default to 0.29.35
       - name: Extract Cython pin from README (fallback to 0.29.35)
