--- a/.github/workflows/build-cockpit-zfs.yml
+++ b/.github/workflows/build-cockpit-zfs.yml
@@ -51,7 +51,7 @@ jobs:
           DEBIAN_FRONTEND=noninteractive apt-get install -y \
             ca-certificates curl jq rsync pkg-config \
             build-essential debhelper devscripts fakeroot dpkg-dev dh-python \
-            python3 python3-pip python3-pyzfs python3-packaging python3-dev python3-wheel python3-venv python3-packaging \
+            python3 python3-pip python3-pyzfs python3-packaging python3-dev python3-setuptools python3-wheel python3-venv python3-packaging \
             zfsutils-linux libzfslinux-dev \
             git make gzip tar findutils xz-utils gnupg apt-utils \
             gnupg apt-utils moreutils default-jre-headless graphviz \
